--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-dom": "^19.2.0",
     "@google/genai": "^1.28.0",
     "recharts": "^3.3.0",
-    "react": "^19.2.0"
+    "react": "^19.2.0",
+    "express": "^5.1.0",
+    "dotenv": "^17.2.3",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
