--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@google/genai": "^1.28.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.10.1"
   }
 }
