--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "^19.2.0",
     "express": "^5.1.0",
     "dotenv": "^17.2.3",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.15.3",
+    "bcryptjs": "^3.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
